# SO3-NET

./: .gitignore  README.md  config.py  model.py  network.py  network_equivariant.py  network_hybrid.py  network_lie.py  network_shs.py  pyproject.toml  requirements.txt  test.py  train.py
Common/: EquivariantDataLoader.py  RobustPointSetDataLoader.py  geometric_utils.py  loss_equivariant.py  loss_shs.py  loss_utils.py
docs/: architecture_design.md  baseline_diagnostics.md  codebase_survey.md  experiment_plan.md  hierarchical_dgcnn_partial_result.md  hierarchical_partial_upright_training.md  loss_decomposition_design.md  partial_pairwise_delta_progress_2026-06-08.md  partial_uprightnet_true_classification_loss.md  research_ideas.md  research_plan.md  upright_direction_literature_review.md  uprightness_classifier_training.md
logs/: baseline_failure_samples.txt  baseline_per_category.csv
scripts/: blender_partial_uprightnet15.py  build_hierarchy_npz.py  build_pairwise_order_npz.py  build_uprightness_npz.py  diag_ceilings.py  diag_exp4.py  diagnose_baseline.py  eval_dlie_refine_zeroshot.py  eval_dlie_zeroshot.py  eval_hierarchical_ensemble.py  eval_hierarchical_uprightnet.py  eval_lie_zeroshot.py  eval_official_baseline.py  eval_oracle_recovery.py  eval_polar_zeroshot.py  eval_shs_10rot.py  md_to_pdf.py  overfit_dlie_refine.py  overfit_hybrid.py  overfit_shs.py  relabel_hierarchy_npz.py  run_modelnet15_hierarchy_pipeline.sh  run_modelnet15_uprightness_pipeline.sh  train_dlie_refine.py  train_hierarchical_uprightnet.py  train_hybrid.py  train_hybrid_full.sh  train_l1.sh  train_l2.sh  train_ordinal_hierarchical_uprightnet.py  train_original.sh  train_shs.py  (+4 more)
(+7 files in other folders)
